add gc-analysis