@@ -34,6 +34,10 @@ python3 scripts/test.py
 PROFILE_EVENT=alloc ./scripts/async-profiler.sh    # allocation
 PROFILE_EVENT=wall  ./scripts/async-profiler.sh    # wall-clock
 
+# GC log analysis — pause frequency/duration per concurrency step (requires: brew install hey)
+./scripts/gc-analysis.sh                                   # default G1GC
+GC_COLLECTOR="-XX:+UseZGC" ./scripts/gc-analysis.sh        # compare with ZGC
+
 # run JMH micro-benchmarks (Router, Parser, Serializer)
 ./gradlew jmh
 
@@ -217,7 +221,7 @@ Fix active bugs before adding anything new.
 - [x] **Load testing: `hey`** — concurrency sweep (10 → 100 → 1000 connections) to find the throughput cliff. `scripts/load-test-hey.sh` runs `hey -n 100000` at each concurrency level against `/`, `/echo/hello`, and `/user-agent`, then prints a summary table.
 - [x] **Profiling: async-profiler** — flame graph of CPU and allocation on the hot path under load. Identifies which allocations to pool (Step 4) and which code path to NIO-ify (Step 3). `scripts/async-profiler.sh` wraps `asprof start/stop` around a `wrk` load run, producing an HTML flame graph in `build/profile-results/`. Configurable via `PROFILE_EVENT` (`cpu`, `alloc`, `wall`).
 - [x] **Micro-benchmarks (JMH)** — component-level throughput: `Router.dispatch()`, `HttpRequestParser.parse()`, `HttpResponseSerializer.serialize()`. Isolates hot-path regressions. Run after async-profiler identifies the hot component.
-- [ ] **GC log analysis** — `-Xlog:gc*` to measure pause frequency and duration at each concurrency step. Validates whether ZGC/Shenandoah (Step 5) is necessary. Only relevant above ~500K RPS.
+- [x] **GC log analysis** — `-Xlog:gc*` to measure pause frequency and duration at each concurrency step. Validates whether ZGC/Shenandoah (Step 5) is necessary. Only relevant above ~500K RPS. `scripts/gc-analysis.sh` starts/stops the server per concurrency level with GC logging, parses pause times, and prints a summary table. Configurable collector via `GC_COLLECTOR` env var.
 
 ### 3. HTTP/1.1 Protocol
 - [x] **Persistent connections (keep-alive)** — connection loop in `HttpConnectionHandler` reuses TCP connection across multiple requests.
